<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.nancho313.loqui</groupId>
    <artifactId>parent-pom</artifactId>
    <version>1.2.0</version>
    <relativePath/>
  </parent>
  <groupId>com.nancho313.loqui.connector</groupId>
  <artifactId>connector-parent</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>loqui-connector</name>
      
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <java.version>21</java.version>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.organization>nancho313</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <sonar.coverage.exclusions>
      **/infrastructure/**/kafka/emitter/*,
      **/config/*
    </sonar.coverage.exclusions>
    <skipmutationtests>true</skipmutationtests>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.nancho313.loqui.connector</groupId>
        <artifactId>domain</artifactId>
        <version>${version}</version>
      </dependency>
      <dependency>
        <groupId>com.nancho313.loqui.connector</groupId>
        <artifactId>application</artifactId>
        <version>${version}</version>
      </dependency>
      <dependency>
        <groupId>com.nancho313.loqui.connector</groupId>
        <artifactId>infrastructure</artifactId>
        <version>${version}</version>
      </dependency>
      <dependency>
        <groupId>com.nancho313.loqui.connector</groupId>
        <artifactId>contract</artifactId>
        <version>${version}</version>
      </dependency>
      <dependency>
        <groupId>com.nancho313.loqui.connector</groupId>
        <artifactId>websocket</artifactId>
        <version>${version}</version>
      </dependency>
      <dependency>
        <groupId>com.nancho313.loqui.connector</groupId>
        <artifactId>boot</artifactId>
        <version>${version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>domain</module>
    <module>application</module>
    <module>websocket</module>
    <module>infrastructure</module>
    <module>contract</module>
    <module>boot</module>
    <module>jacoco-coverage</module>
    <module>pitest-coverage</module>
  </modules>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub OWNER Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/nancho313/loqui-connector</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.10</version>
        <executions>
          <execution>
            <id>jacoco-initialize</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>**/infrastructure/**/kafka/emitter/*</exclude>
            <exclude>**/config/*</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>1.15.2</version>
        <dependencies>
          <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-junit5-plugin</artifactId>
            <version>1.2.1</version>
          </dependency>
        </dependencies>
        <configuration>
          <exportLineCoverage>true</exportLineCoverage>
          <outputFormats>
            <value>XML</value>
          </outputFormats>
          <excludedTestClasses>
            <testClass>com.nancho313.loqui.connector.integrationtest.*</testClass>
          </excludedTestClasses>
          <excludedClasses>
            <class>com.nancho313.loqui.connector.infrastructure.client.kafka.emitter.*</class>
            <class>com.nancho313.loqui.connector.**.config.*</class>
          </excludedClasses>
          <skip>${skipmutationtests}</skip>
        </configuration>
        <executions>
          <execution>
            <id>mutationTests</id>
            <goals>
              <goal>mutationCoverage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.time=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
</project>
